unpackaged/main/default/objects/ET_Vehicle_Depreciation_and_Resale__c/ET_Vehicle_Depreciation_and_Resale__c.object-meta.xml
<CustomObject>
    <label>Vehicle Depreciation and Resale</label>
    <nameField>
        <displayFormat>VDR-{0000}</displayFormat>
        <label>Vehicle Depreciation and Resale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Depreciation and Resale</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>