unpackaged/main/default/objects/ET_Vehicle_Depreciation_and_Resale__c/fields/ET_Max_Depreciation_Years__c.field-meta.xml
<CustomField>
    <fullName>ET_Max_Depreciation_Years__c</fullName>
    <label>Max Depreciation Years</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>