unpackaged/main/default/objects/ET_Vehicle_Depreciation_and_Resale__c/fields/ET_Max_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>ET_Max_Resale_Value__c</fullName>
    <label>Max Resale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>