unpackaged/main/default/objects/ET_Vehicle_Depreciation_and_Resale__c/fields/ET_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Master__c</fullName>
    <label>Vehicle Master</label>
    <referenceTo>ET_Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicle Depreciation and Resale</relationshipLabel>
    <relationshipName>Vehicle_Depreciation_and_Resale</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>